# swarm

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  docker-compose.yml
.github/workflows/: ci-cd.yml
frontend/: Dockerfile  nginx.conf  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.tsx  AuthPanel.tsx  BoardRailPanel.tsx  HeroPanel.tsx  ServerStatusPanel.tsx  SessionPanel.tsx  ShowcasePanel.tsx
frontend/src/constants/: storage.ts
frontend/src/hooks/: useAuthSession.ts  useLocale.ts  useServerHealth.ts  useTheme.ts
frontend/src/i18n/: en.ts  index.ts  ru.ts  types.ts
frontend/src/pages/: AuthPage.tsx  WorkspacePage.tsx
frontend/src/types/: auth.ts  ui.ts
scripts/: deploy-remote.sh  deploy.ps1
src/: app_state.rs  config.rs  error.rs  main.rs  models.rs
src/auth/: extractor.rs  jwt.rs
src/db/: schema.rs  users.rs
src/http/: admin.rs  auth.rs  mod.rs
